Closed Bug 1820826 Opened 2 years ago Closed 2 years ago

`performance.mark` markers are wrongly positioned when { startTime } is used.

Categories

(Core :: Gecko Profiler, defect, P1)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: julienw, Assigned: canova)

References

(Blocks 1 open bug)

Details

(Whiteboard: [sp3])

Attachments

(1 file)

We insert the marker in this location: https://searchfox.org/mozilla-central/rev/3002762e41363de8ee9ca80196d55e79651bcb6b/dom/performance/Performance.cpp#349-351

We don't pass any timestamp, this means that the profiler subsystem will get one by itself. This is mostly correct in the usual case, but it's not if we use the form where the startTime is passed as a parameter:

performance.mark("mark-name", { startTime });

We should take it into account... but taking care that we don't have the same precision problem than in bug 1820813.

Severity: -- → S3
Priority: -- → P2
Priority: P2 → P1
Assignee: nobody → canaltinova
Status: NEW → ASSIGNED
Blocks: speedometer3
Whiteboard: [sp3]
Pushed by canaltinova@gmail.com: https://hg.mozilla.org/integration/autoland/rev/1ffc9e3d34e6 Use the startTime in performance.mark API if it's provided in its options r=mstange
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: