Bug 1820826 - Use the startTime in performance.mark API if it's provided in its options r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D173003